--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
